--- a/project/week_1/Front/kakao_profile/templates/kakao_profile.html
+++ b/project/week_1/Front/kakao_profile/templates/kakao_profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <title>내일배움캠프 | (구)카카오 프로필 만들기</title>
 </head>
 <body>
@@ -23,9 +23,9 @@
                 <p>보리🐶</p>
             </div>
             <div class="profile_userinfo_icons">
-                <div><img src="./icons/나와의 채팅.png" class="icons"></div>
-                <div><img src="./icons/프로필관리.png" class="icons"></div>
-                <div><img src="./icons/카스.png" class="icons"></div>                
+                <div><img src="../static/icons/나와의 채팅.png" class="icons"></div>
+                <div><img src="../static/icons/프로필관리.png" class="icons"></div>
+                <div><img src="../static/icons/카스.png" class="icons"></div>                
             </div>
             <div class="profile_userinfo_text">
                 <p> 나와의 채팅 </p>
