--- a/project/week_1/Front/instagram_feed/static/app_style.css
+++ b/project/week_1/Front/instagram_feed/static/app_style.css
@@ -4,6 +4,11 @@ body {
 
 .container {
   width: 100%;
+  display: flex;
+}
+
+.app_container {
+  max-width: 100%;
   flex-direction: column;
 }
 
@@ -13,6 +18,11 @@ body {
   position: fixed;
   display: flex;
   top: 0;
+  z-index: 999;
+  background: #ffffff;
+  border-bottom: 1px solid lightgray;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav {
@@ -23,22 +33,23 @@ body {
   justify-content: space-between;
   align-content: center;
   background-color: #ffffff;
-  border-bottom: 1px solid lightgray;
 }
 
-#camera {
+.nav #camera {
   height: 60%;
   display: flex;
   position: relative;
   left: 10%;
   top: 10%;
 }
-#logo {
+
+.nav #logo {
   height: 100%;
   display: flex;
   position: relative;
 }
-#dm {
+
+.nav #dm {
   display: flex;
   height: 60%;
   right: 10%;
@@ -52,7 +63,7 @@ body {
   display: flex;
   background: #fafafa;
   overflow: hidden;
-  margin: auto;
+  overflow-x: auto;
   border: 1px solid lightgray;
 }
 
@@ -240,6 +251,7 @@ body {
   height: 6vh;
   justify-content: space-between;
   align-items: center;
+
   background-color: #ffffff;
   border-top: 1px solid lightgray;
 }
@@ -257,13 +269,13 @@ body {
 }
 
 .bottom_blank {
-  width: 100%;
-  height: 3rem;
+  width: 10%;
+  height: 4rem;
 }
 
 .top_blank {
-  width: 100%;
-  height: 3rem;
+  width: 10%;
+  height: 4rem;
 }
 
 @media (min-width: 1024px) {
@@ -272,22 +284,33 @@ body {
     justify-content: center;
   }
   .container {
-    width: 70%;
+    width: 1024px;
+  }
+
+  .app_container {
+    max-width: 60%;
   }
   .nav_container {
-    width: 70%;
+    width: 100%;
   }
   .story_content {
-    width: 70%;
+    width: 50%;
   }
   .bottom_nav_container {
-    width: 70%;
+    display: none;
   }
   .story {
-    width: 70%;
+    max-width: 50%;
+    width: 50%;
   }
   .story_content {
-    width: 5rem;
-    height: 5rem;
+    width: 4rem;
+    height: 4rem;
+  }
+  .web_container {
+    display: flex;
+  }
+  .nav {
+    display: none;
   }
 }
