--- a/django/templates/tweet/home.html
+++ b/django/templates/tweet/home.html
@@ -27,8 +27,20 @@
                                         <p>
                                         <form action='/tweet/' method="post">
                                             {% csrf_token %}
+                                            {% if error_msg %}
+                                            <div class="alert alert-danger" role="alert">
+                                                {{ error_msg }}
+                                            </div>
+                                            {% endif %}
                                             <div class="form-group mb-2">
                                                 <textarea class="form-control" style="resize: none" name='my-content' id="my-content"></textarea>
+                                                <div class="mt-3 row">
+                                                    <label for="tag" class="col-sm-2 col-form-label">이 글의 태그</label>
+                                                    <div class="col-sm-10">
+                                                        <input type="text" class='form-control' name='tag' id='tag'
+                                                        placeholder="콤마(,)로 구분 해 주세요.">
+                                                    </div>
+                                                </div>
                                             </div>
                                             <button type="submit" class="btn btn-primary" style="float:right;">작성하기</button>
                                         </form>
@@ -61,6 +73,17 @@
                                 <div class="media">
                                     <div class="media-body">
                                         <h5 class="mt-0">{{ tweet.content }}</h5>
+                                        {% if tweet.tags.all %}
+                                            {% for tag in tweet.tags.all %}
+                                                <a style="text-decoration: none" href="{% url 'tagged_object_list' tag.name %}">
+                                                    <span class="badge rounded-pill bg-success">
+                                                        {{ tag.name }}
+                                                    </span>
+                                                </a>
+                                            {% endfor %}
+                                            -<a style="text-decoration: none"
+                                                href="{% url 'tag_cloud' %}">TagCloud</a>
+                                        {% endif %}
                                     </div>
                                     <div style="text-align: right">
                                         <span style="font-size: small;">{{ tweet.author.username }} - {{ tweet.created_at | timesince}} 전</span>
