--- a/django/templates/tweet/home.html
+++ b/django/templates/tweet/home.html
@@ -54,7 +54,7 @@
                 <hr>
                 <!-- 작성 된 글이 나오는 곳 -->
                 <div class="row">
-                    {% for tweet in tweets %}
+                    {% for tweet in tweetmodel_list %}
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-body">
