--- a/do_it_django/templates/blog/post_detail.html
+++ b/do_it_django/templates/blog/post_detail.html
@@ -17,6 +17,10 @@
     <!-- Custom styles for this template -->
     <link href="{% static 'blog/css/blog-post.css' %}" rel="stylesheet">
 
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -73,12 +77,33 @@
             <hr>
 
             <!-- Preview Image -->
+            {% if post.head_image%}
             <img class="img-fluid rounded" src="{{post.head_image.url}}" alt="{{post.title}}">
+            {% else %}
+            <img class="card-img-top" src="https://picsum.photos/seed/{{p.id}}/600/200" >
+            {% endif %}
 
             <hr>
 
             <!-- Post Content -->
             <p>{{ post.content }}</p>
+            {% if post.file_upload %}
+                <a href="{{post.file_upload.url}}" type="button" class="btn btn-info" role="button" download>
+                    download:  
+                    
+                    {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                    <i class="far fa-file-excel"></i>
+                    {% elif post.get_file_ext == 'csv'%}
+                    <i class="fas fa-file-csv"></i>
+                    {% elif post.get_file_ext == 'docx' %}
+                    <i class="far fa-file-word"></i>
+                    {% else %}
+                    <i class="far fa-file-alt"></i>
+                    {% endif %}
+                    {{ post.get_file_name}}
+                </a>
+            {% endif %}
+
             <hr>
 
 
