--- a/do_it_django/templates/blog/base.html
+++ b/do_it_django/templates/blog/base.html
@@ -15,10 +15,43 @@
                     {% block main_area %}
                     {% endblock %}
                 </div>
+                <div class="col-md-4 col-lg-3">
+                    <!-- Search Widget -->
+                    <div class="card my-4">
+                        <h5 class="card-header">Search</h5>
+                        <div class="card-body">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Search for...">
+                                <span class="input-group-append">
+                                    <button class="btn btn-secondary" type="button">Go!</button>
+                                    </span>
+                            </div>
+                        </div>
+                    </div>
+                     <!-- Categories Widget -->
+            <div class="card my-4" id="categories-card">
+                <h5 class="card-header">Categories</h5>
+                <div class="card-body">
+                    <div class="row">
+
+                        <ul>
+                            {% for category in categories %}
+                            <li>
+                                <a href="#">{{ category.name }} ({{ category.post_set.count }})</a>
+                            </li>
+                            {% endfor %}
+                            <li>
+                                <a href="#">미분류 ({{ no_category_post_count }})</a>
+                            </li>
+                        </ul>
+
+
+                    </div>
+                </div>
+                </div>
             </div>
-
         </div>
-
+        
         {% include 'blog/footer.html' %}
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
